--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,119 @@
-gym==0.18.3
-procgen==0.10.7
+absl-py==1.2.0
+anyio==3.6.1
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
 atari-py==0.2.9
+attrs==22.1.0
+backcall==0.2.0
+beautifulsoup4==4.11.1
+bleach==5.0.1
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+cloudpickle==1.6.0
+cycler==0.11.0
+Cython==0.29.32
+debugpy==1.6.3
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.4
+entrypoints==0.4
+fasteners==0.17.3
+fastjsonschema==2.16.2
+filelock==3.6.0
+glcontext==2.3.6
+glfw==1.12.0
+gym==0.18.3
+gym3==0.3.3
+idna==3.4
+imageio==2.9.0
+imageio-ffmpeg==0.3.0
+importlib-metadata==5.0.0
+importlib-resources==5.10.0
+ipdb==0.13.11
+ipykernel==6.16.0
+ipython==7.34.0
+ipython-genutils==0.2.0
+jedi==0.18.1
+Jinja2==3.1.2
+joblib==1.1.0
+jsonschema==4.16.0
+jupyter-core==4.11.1
+jupyter-server==1.21.0
+jupyter_client==7.4.2
+jupyterlab-pygments==0.2.2
+kiwisolver==1.3.2
+MarkupSafe==2.1.1
+matplotlib==3.4.3
+matplotlib-inline==0.1.6
+mistune==2.0.4
+moderngl==5.6.4
+mujoco==2.2.2
+mujoco-py==2.1.2.14
+nbclassic==0.4.5
+nbclient==0.7.0
+nbconvert==7.2.1
+nbformat==5.7.0
+nest-asyncio==1.5.6
+networkx==2.6.3
+notebook==6.5.1
+notebook-shim==0.1.0
 numpy==1.21.2
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+onager==0.1.3
 opencv-python==4.5.3.56
+packaging==21.3
+pandas==1.3.5
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
 pfrl==0.3.0
+pickleshare==0.7.5
+Pillow==8.2.0
+pkgutil_resolve_name==1.3.10
+procgen==0.10.7
+prometheus-client==0.15.0
+prompt-toolkit==3.0.31
+psutil==5.9.2
+ptyprocess==0.7.0
+pycparser==2.21
+pyglet==1.5.15
+Pygments==2.13.0
+PyOpenGL==3.1.6
+pyparsing==3.0.7
+pyrsistent==0.18.1
+python-dateutil==2.8.2
+pytz==2022.2.1
+PyWavelets==1.3.0
+pyzmq==24.0.1
+requests==2.28.2
+scikit-image==0.19.3
 scikit-learn==1.0
 scipy==1.7.1
+seaborn==0.12.0
 seeding==0.1.0
+Send2Trash==1.8.0
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.3.2.post1
+tabulate==0.8.9
+terminado==0.16.0
 threadpoolctl==3.0.0
-torch==1.9.1
+tifffile==2021.11.2
+tinycss2==1.1.1
+tomli==2.0.1
+torch==1.13.1
+torchaudio==0.13.1
+torchvision==0.14.1
+tornado==6.2
+traitlets==5.4.0
 typing-extensions==3.10.0.2
-matplotlib==3.4.3
-dill==0.3.4
-scikit-image==0.19.3
-pandas==1.4.3
+urllib3==1.26.15
+virtualenv-clone==0.5.7
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.4.1
+zipp==3.9.0
